@startuml
title Classes used in the example

namespace Chippyash.BuilderPattern {
    abstract class AbstractBuilder
    abstract class AbstractCollectionBuilder
    abstract class AbstractDirector
    class Modifier

    namespace Example {

        namespace Builder {
            class AccountBuilder
            class CustomerBuilder
            class ItemBuilder
            class PurchaseCollectionBuilder

            PurchaseCollectionBuilder --* ItemBuilder
            AccountBuilder --o PurchaseCollectionBuilder
            CustomerBuilder --o AccountBuilder
        }

        namespace Director {
            class CustomerDirector
        }

        Director.CustomerDirector --o Builder.CustomerBuilder
        Builder.CustomerBuilder --|> Chippyash.BuilderPattern.AbstractBuilder
        Builder.AccountBuilder --|> Chippyash.BuilderPattern.AbstractBuilder
        Builder.ItemBuilder --|> Chippyash.BuilderPattern.AbstractBuilder
        Chippyash.BuilderPattern.AbstractCollectionBuilder <|-- Builder.PurchaseCollectionBuilder
        Chippyash.BuilderPattern.AbstractDirector <|-- Director.CustomerDirector
        Chippyash.BuilderPattern.Modifier o-- Director.CustomerDirector
    }

    AbstractBuilder <|-- AbstractCollectionBuilder

}
@enduml